--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -11,7 +11,7 @@ max_rows = 1000
 [db]
 port = 54322
 shadow_port = 54320
-major_version = 15
+major_version = 17
 
 [db.pooler]
 enabled = false
@@ -47,7 +47,7 @@ enable_signup = true
 [auth.email]
 enable_signup = true
 double_confirm_changes = true
-enable_confirmations = true
+enable_confirmations = false  # Disabled for local development - emails auto-confirmed
 
 [auth.sms]
 enable_signup = false
